[package]
name = "odr-dabmux-gui"
version = "0.0.1"
edition = "2021"
authors = ["Matthias P. Braendli <matthias.braendli@mpb.li>"]
license = "GPLv3"

[dependencies]
anyhow = "1.0"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
axum = { version = "0.7", features = ["ws"] }
#axum-extra = "0.7"
chrono = { version = "0.4", features = ["serde"] }
simple_logger = "5.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite"]}
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tower-http = { version = "0.5.0", features = ["fs"] }

futures-core = "0.3"
futures= "0.3"
tun = { version = "0.6", features = ["async"] }
